test/integration/bad/array-multi-decl-bad2.stan
model {
  real x[3] = {1,2,3}, y;
}
